<resources>
    <string name="app_name">TLV Parser</string>
    <string name="enter_tlv">Enter TLV</string>
    <string name="parse">Parse</string>
    <string name="tlv_information">TLV Information</string>
    <string name="please_enter_a_valid_tlv">Please enter a valid TLV</string>
    <string name="tag_length">Tag Length:</string>
    <string name="tag_value">Tag Value:</string>
    <string name="tag">Tag:</string>
    <string name="description">Description:</string>
    <string name="tlv_example">9F0607A00000000410105F300202019F02060000000000019F160F4243544553542031323334353637385F24032307314F07A00000000410109F34030203009A031406179F03060000000000005A0A6214672500000000056F57132223000010025499D19122010000000004180F9F101200146000002C0000000000000000000000FF9F4E0F61626364000000000000000000000082027C008E0C000000000000000002031F005F25031307089F0702AB009F0D05D86004A8009F0E0500109800009F0F05D86804F8009F260845CFE577DD2B762B9F2701409F360202689C01009F3303E0F8C89F37042120A7189F3901059F4005F000F0A0019505088004E0009B02E8008407A00000033301015F2A0201565F3401019F0902008C9F1A0201569F1E0838333230314943439F3501229F4104000000019F5301525F20135445535420434152442F454D562042494E2D325F280208408A023030500A4D4153544552434152449F080200200000</string>
    <string name="tlv_example_2">5F201A54444320424C41434B20554E4C494D49544544205649534120204F07A00000000310105F24032307319F160F4243544553542031323334353637389F21031826509A031406179F02060000000000019F03060000000000009F34030203009F120C56495341204352454449544F9F0607A00000000310105F300202019F4E0F616263640000000000000000000000C408491573FFFFFF1097C00A09117101800165E0000AC2820168D9DE289AAD770BE408F6B1D4E0A2576CEA7F03CD479CE3A1827375D6C4D4959ACDB5D3B6F84CD83430F4346C35E48A77A0D5F36FBEA444C2D8701C07FFC7AF06C0485D68F7A83FC30840D3C0766EC4EE669BE5A42BAD4C7459680FAAAE9C4EFEFFEB5A590E53B3E91B3CD28A415C2C9484E26DA5A15592BBCD1F45CF49D27A9D480B031957DF8C790C55FF60DB192CCD070FA4F7BCDC99E7F7567C2F991B5536F9336BA66D68115D54BC3642A9CA47FDD162FCDC33E455AAC283975DACC98CBE9A6611E996F0740072CF8E32D3D9F39F4BB25568F5CC3E7F5DE158E4D62BF4E7185CF13BD068C4F062C26A3BBF88E056F249130E89AA29E52A1EBB6BAD98296822F10949F0C825D1449DA7EF4431AB846D0DDB916F2901359DD9A3B3395BAC9F9BE4D24657F65B030DDADA53577A14D9F5F776B6FF7EAB99D8C4BB08BEF2016C72D94B1DB91BCF0238405B7857646DCE5F79871D96B6A6652090FD8CFCC59973433919A6D0533DFE</string>
    <string name="okay">Okay</string>
</resources>