<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".ui.TLVActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_enter_tlv"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:hintTextColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_enter_tlv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_tlv"
            android:maxLines="3"
            android:ellipsize="end"
            android:fontFamily="@font/mulish_regular"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="14sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_parse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parse"
        android:fontFamily="@font/mulish_regular"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_enter_tlv"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tlv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tlv_information"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mulish_semibold"
        app:layout_constraintTop_toBottomOf="@id/btn_parse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tlv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlv_information" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/rv_tlv"
        app:layout_constraintBottom_toBottomOf="@+id/rv_tlv"
        app:layout_constraintStart_toStartOf="@+id/rv_tlv"
        app:layout_constraintEnd_toEndOf="@+id/rv_tlv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>